--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kulluz.com",
+  "name": "volvo-hub",
   "private": true,
   "scripts": {
     "start": "meteor run",
@@ -8,10 +8,29 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.4",
-    "meteor-node-stubs": "^1.1.0",
+    "@babel/runtime": "^7.17.9",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.7",
+    "@nivo/core": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
+    "@nivo/radial-bar": "^0.80.0",
+    "@tweenjs/tween.js": "^18.6.4",
+    "highcharts": "^10.2.1",
+    "highcharts-react-official": "^3.1.0",
+    "lil-gui": "^0.17.0",
+    "mapbox-gl": "^2.9.2",
+    "meteor-node-stubs": "^1.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "recharts": "^2.1.14",
+    "three": "^0.142.0",
+    "threebox-plugin": "^2.2.7",
+    "turf": "^3.0.14",
+    "tweenjs": "^1.0.2",
+    "viewmodel-react": "^3.1.7",
+    "viewmodel-react-plugin": "^3.1.4"
   },
   "meteor": {
     "mainModule": {
