--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
+    "@mui/x-data-grid": "^5.17.13",
+    "@mui/x-date-pickers": "^5.0.8",
     "@nivo/core": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "@nivo/radial-bar": "^0.80.0",
     "@tweenjs/tween.js": "^18.6.4",
+    "dayjs": "^1.11.6",
     "highcharts": "^10.2.1",
     "highcharts-react-official": "^3.1.0",
     "lil-gui": "^0.17.0",
